docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-01-16.ceg/compilation.txt
Grupo.java:29: error: illegal start of expression
    this.alumno=[contadorDeAlumnos++]=alumno;
                ^
Grupo.java:29: error: ';' expected
    this.alumno=[contadorDeAlumnos++]=alumno;
                                    ^
Grupo.java:29: error: not a statement
    this.alumno=[contadorDeAlumnos++]=alumno;
                                      ^
3 errors
Not compiled
